css/style.css
html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
}

html {
    overflow:auto;
    overflow-y: scroll;
}

body {
    background:#fff;
    color:rgba(0,0,0,1);
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400;
    font-size:10px;
}

h1 {
    font-size:10em;
    margin:0 0 .5em 0;
    line-height: 1;
    max-width: 2em;
}

h2 {
    font-size:3em;
    margin:0 0 .5em 0;
    line-height: 1.8;
    letter-spacing:.05em;
}

h1, h2 {
    font-family: 'Bangers', cursive;
}

h1 i, h2 i {
    float:left;
    margin:-2px .5em 0 -1.8em;
}

p {
    margin:0 0 1.5em 0;
    line-height: 1.8;
    max-width:28em;
    font-size:2em;
}

p.first {
    padding-top:1.5em;
    margin:0;
}

ol {
    list-style-type:decimal;
    margin:0;
    font-size:2em;
}

ol.last {
    margin-bottom:5em;
}

ol p {
    display: none;
}

li {
    line-height: 1.5;
}

a {
    color:#d33682;
    text-decoration: none;
}

a:hover, a:visited:hover {
    color:#000;
}

a:visited {
    color:#657B83;
}

li a {
    padding:.3em 0;
    display: block;
}

ul {
    padding:2em 0 0 0;
}

ul li {
    display: inline-block;
    background: #fff;
    border-left:.5em solid #3387c4;
    font-size:1.6em;
    padding:.5em 1em;
    margin:0 .5em 1em 0;
}

ul li a, ul li a:visited {
    display: inline;
    color:rgba(0,0,0,1);
}

a span {
    color:rgba(0,0,0,0.3);
    padding:0 0 0 .5em;
    float: right;
}

a:hover span {
    color:#000;
}

strong {
    display: block;
    float: left;
    margin:.3em .5em 0 0;
    padding:.3em .5em;
    line-height: 1;
    font-size:.7em;
    text-transform: uppercase;
    background: #BBE5F9;
    border-left:.5em solid #3387c4;
    color:#3387c4;
}

input[type=email] {
    border:none;
    font-size:.6em;
    padding:1em;
    width:30em;
    margin:0 0 1em 0;
    background: rgba(255,255,255,0.9);
}

input[type=email]:focus {
    background: #fff;
    outline: none;
}

input[type=submit] {
    border:none;
    background: rgba(0,0,0,0.5);
    color:#fff;
    padding:1em 2em;
    font-size:.6em;
    cursor: pointer;
    margin:0;
}

input[type=submit]:hover {
    background: rgba(0,0,0,0.7);
}

form p {
    margin:0;
}

/* --------------------------------------- */

section {
    -webkit-box-sizing:border-box;
    -moz-box-sizing:border-box;
    box-sizing:border-box;
    position: relative;
    background-position: top right;
    background-repeat: no-repeat;
    background-size: auto 100%;
    padding:10em 10em 10em 15em;
}

section.alternate {
    padding:15em 15em 15em 70em;
}

section.alternate p {
    max-width: 40em;
}

section.invert {
    color:#fff;
}

section.invert a {
    color:#fff;
    text-decoration: underline;
}

section.init {
    height: 100%;
}

section .inner {
    position: absolute;
    left:15em;
    bottom:10em;
}

section .content {
    max-width: 105em;
    margin:0 auto;
}

section.one {
    background-image:url("../images/gun.gif");
    background-color: #be2826;
    color:#fff;
}

section.two {
    background-position: top left;
    background-image:url("../images/blue.gif");
    background-color: #BBE5F9;
    color:#000;
}

section.two a {
    color:#297fa8;
}

section.two a:hover {
    color:#000;
}

section.more {
    background-image: url("../images/what.gif");
    background-color: #3387c4;
    color:#fff;
}

section.more a {
    color:#fff;
}

section.more a span {
    float: none;
}

section.close {
    padding-top:0;
}

section.top {
    padding-top:15em;
}

section.last {
    padding-bottom:15em;
}

section.links {
    max-width: 130em;
    margin:0 auto;
}

section.links ol {
    border-top:.09em dotted #f0f0f0;
}

section.links a {
    border-bottom:.09em dotted #f0f0f0;
}

section.links a:hover {
    border-color:#ddd;
}

section.credits {
    background: #BBE5F9;
}

/* --------------------------------------- */

@media only screen and (-webkit-min-device-pixel-ratio: 2),
only screen and (   min--moz-device-pixel-ratio: 2),
only screen and (     -o-min-device-pixel-ratio: 2/1),
only screen and (        min-device-pixel-ratio: 2),
only screen and (                min-resolution: 192dpi),
only screen and (                min-resolution: 2dppx) {

    section.one { background-image:url("../images/gun@2x.gif"); }
    section.two { background-image:url("../images/blue@2x.gif"); }
    section.more { background-image: url("../images/what@2x.gif"); }

}

/* --------------------------------------- */

@media all and (max-width: 85em) {
    body { font-size:9px; }
}

@media all and (max-width: 75em) {
    body { font-size:8px; }
    section.init { height: auto; }
    section .inner { position: static; }
}

@media all and (max-width: 65em) {
    body { font-size:7px; }
    section.two { background-image:none; }
    section.alternate { padding:10em 15em; }
}

@media all and (max-width: 55em) {
    li a span { display: none; }
    section.more { background-image:none; }
}

@media all and (max-width: 50em) {
    section, section.alternate, section.top, section.last { padding:10em; }
    section.close { padding-top:0; }
    i { display: none !important; }
}

@media all and (max-width: 40em) {
    section.one { background-image:none; }
    h1 { font-size:7em; }
    input[type=email] { width:20em; }
    br { display: none; }
}

